# ai-gateway-api

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Justfile  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
docs/: backend_skills.md  overview.md  project_structure.md  roadmap.md
docs/adr/: 000-bootstrap.md
project_structure/: ai_gateway_project_detail.html  ai_gateway_project_detail.md  backend_skills.md
src/: config.rs  errors.rs  lib.rs  main.rs  middleware.rs  state.rs  telemetry.rs
tests/integration/: health.rs
