[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = {version = "1", features = ["full"]}
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
envy = "0.4.2"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dev-dependencies]
axum-test = "20.0.0"
